2005-10-23  Thien-Thi Nguyen  <ttn@gnu.org>

	* whitespace.el (whitespace-cleanup): Doc fix.

2005-10-23  Romain Francoise  <romain@orebokech.com>

	* emulation/viper.el (viper-set-hooks): Quote forms passed to
	`eval-after-load' to avoid evaluating their result.

2005-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (directory-listing-before-filename-regexp): New
	defvar.  Replaces `dired-move-to-filename-regexp' from dired.el.

	* dired.el (dired-move-to-filename-regexp): Removed.  All
	occurences replaced by `directory-listing-before-filename-regexp'.

	* dired-x.el, locate.el, vc.el: Replace
	`dired-move-to-filename-regexp' by
	`directory-listing-before-filename-regexp'.  In vc.el it is
	overwritten locally; maybe this can be handled in files.el too.

	* net/ange-ftp.el (ange-ftp-date-regexp): Removed.  All occurences
	replaced by `directory-listing-before-filename-regexp'.

2005-10-23  Andreas Schwab  <schwab@suse.de>

	* font-lock.el (lisp-font-lock-keywords-2): Add eval-at-startup
	and eval-next-after-load.

2005-10-23  MIYOSHI Masanori  <miyoshi@meadowy.org>  (tiny change)

	* mouse.el (mouse-drag-region): If the *Messages* buffer doesn't
	exist, create it.

2005-10-23  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el: Increment version number to 2.1, and use a literal
	rather than RCS $Id $.  Remove autoloads for mailcrypt and crypt++.
	Require pgg, pgg-gpg during compilation.
	(allout-version): Increment version number to 2.1, and use a literal
	rather than RCS $Id $.
	(allout-default-encryption-scheme): Removed.
	(allout-passphrase-verifier-handling): Renamed from
	allout-key-verifier-handling.
	(allout-passphrase-verifier-string): Renamed from
	allout-key-verifier-string.
	(allout-file-passphrase-verifier-string): Renamed from
	allout-file-key-verifier-string.
	(allout-enable-file-variable-adjustment): Simplified.
	(allout-passphrase-hint-handling): Renamed from
	allout-key-hint-handling and simplified.